	* make statistics propagate instantly rather than on the second tick
	* support for partfiles, where partial pieces belonging to skipped files are put
	* support using multiple threads for socket operations (especially useful for high performance SSL connections)
	* allow setting rate limits for arbitrary peer groups. Generalizes per-torrent rate limits, and local peer limits
	* improved disk cache complexity O(1) instead of O(log(n))
	* add feature to allow storing disk cache blocks in an mmapped file (presumably on an SSD)
	* optimize peer connection distribution logic across torrents to scale better with many torrents
	* replaced std::map with boost::unordered_map for torrent list, to scale better with many torrents
	* optimized piece picker
	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads

	* make built-in sha functions not conflict with libcrypto
	* improve web seed hash failure case
	* improve DHT lookup times
	* uTP path MTU discovery improvements
	* optimized the torrent creator optimizer to scale significantly better with more files
	* fix uTP edge case where udp socket buffer fills up
	* fix nagle implementation in uTP

	* fix typo in python settings binding
	* fix possible dangling pointer use in peer list
	* fix support for storing arbitrary data in the DHT
	* fixed bug in uTP packet circle buffer
	* fix potential crash when using torrent_handle::add_piece
	* added missing add_torrent_alert to python binding

0.16.5 release

	* udp socket refcounter fix
	* added missing async_add_torrent to python bindings
	* raised the limit for bottled http downloads to 2 MiB
	* add support for magnet links and URLs in python example client